# postal-pro

./: README.md  pyproject.toml
.github/workflows/: ci.yml
postalpro/: hooks.py  modules.txt
postalpro/postal_pro_api/: api.py
postalpro/postalpro/doctype/postal_pro_setting/: postal_pro_setting.js  postal_pro_setting.json  postal_pro_setting.py  test_postal_pro_setting.py
postalpro/public/js/: address.js
