[project]
name = "postalpro"
authors = [
    { name = "manish kumar", email = "mk885770@gmail.com"}
]
description = "Postal Pro is an innovative address management tool designed to streamline the process of entering and verifying postal addresses. With its intuitive interface and smart suggestions, users can easily find and autofill address details based on postal codes, ensuring accuracy and efficiency."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
